Fix T80426: Crash when deleting custom orientation

Indices referencing other orientations were not being updated,